# playful-turtle

./: .gitmodules  CMakeLists.txt  README.md  STM32F042F6PX_FLASH.ld  playful_turtle.jdebug
src/: descriptors.c  main.c  stm32f0xx_hal_conf.h  tusb_config.h
